# tthol-toolkit

./: .gitattributes  .gitignore  CLAUDE.md  README.md  auto_detect.py  find_name.py  find_stable_chain.py  gui_main.py  knowledge.json  launcher.py  mem_inspect.py  pyproject.toml  reader.py  requirements.txt  start.bat  verify_name.py  warehouse_scan.py
.github/workflows/: release.yml
docs/plans/: 2026-02-19-pyside6-gui-design.md  2026-02-21-gui-filter-design.md  2026-02-21-gui-filter-impl.md  2026-02-21-item-manager-design.md  2026-02-21-item-manager-impl.md  2026-02-21-item-view-toggle-impl.md  2026-02-21-multi-instance-ui-design.md  2026-02-21-multi-instance-ui-impl.md  2026-02-21-release-update-design.md  2026-02-21-release-update-impl.md  2026-02-21-snapshot-management-design.md  2026-02-21-snapshot-management-impl.md  2026-02-22-launcher-design.md  2026-02-22-launcher-impl.md  2026-02-22-theme-arrows-design.md  2026-02-22-theme-arrows-impl.md  2026-02-26-stable-chain-finder.md
gui/: auto_click_tab.py  character_card.py  character_panel.py  config.py  data_management_tab.py  fake_active.py  i18n.py  inventory_manager_tab.py  inventory_tab.py  launcher_window.py  main_window.py  process_detector.py  snapshot_db.py  status_tab.py  theme.py  warehouse_tab.py  worker.py
tests/: test_character_card.py  test_config.py  test_data_management_tab.py  test_inventory_manager_tab.py  test_launcher_window.py  test_main_window.py  test_process_detector.py  test_reader_filter.py  test_snapshot_db.py  test_theme.py  test_worker.py  test_worker_filter.py
(+1 files in other folders)
