[project]
name = "tthol-memory"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11.9"
dependencies = [
    "psutil>=7.2.2",
    "pymem>=1.14.0",
    "pywin32>=311",
    "pyside6>=6.7",
    "pytest>=8.0",
    "pytest-qt>=4.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
